seeing if this fixes the dark mode when viewing my website through linkedin

--- a/app/global.css
+++ b/app/global.css
@@ -40,6 +40,11 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
+  color: white; 
+}
+
+body {
+  color: white; 
 }
 
 body::before {
